# ml-course

./: .gitignore  .gitmodules  pyproject.toml  readme.md
clouds/: clouds.ipynb
notebooks/: fastai-02-saving-a-basic-fastai-model.ipynb  fastai-02-saving-a-basic-fastai-model.py  fastai-is-it-a-dog.ipynb
notebooks/fastai/: 01-is-it-a-dog.ipynb  02-saving-a-basic-fastai-model.ipynb  03-timm.ipynb
